[popup] Fix unwanted scrollbar

--- a/http/style/main.css
+++ b/http/style/main.css
@@ -1633,7 +1633,7 @@ body.connected #header-signin {
 	background: rgba(240,240,240, 0.95);
 	padding: 15px;
 	overflow-y: auto;
-	/*overflow-x: visible;*/
+	overflow-x: hidden;
 }
 
 .popup.no-actions .content {
